<resources>
    <string name="app_name">Shahane</string>
    <string name="title_activity_maps">شاهانه</string>
    <string name="app_fa_name">شاهانه</string>
    <string name="notification">اعلان ها</string>
    <string name="menu">منو</string>
    <string name="add_person">افزودن</string>
    <string name="username">نام کاربری</string>
    <string name="email_hint">رایانامه</string>
    <string name="password_hint">کلمه عبور</string>
    <string name="signin_button">ورود</string>
    <string name="signup_link">هنوز عضو نشده اید؟</string>
    <string name="login_link">از قبل عضو شاهانه هستید؟</string>
    <string name="logo">لوگو</string>
    <string name="login_logout">ورود یا ثبت نام</string>
    <string name="add_new_item">افزودن موقعیت جدید</string>
    <string name="products">منوی غذا</string>
    <string name="add_notification">اعلانات</string>
    <string name="contact_us">تماس با ما</string>
    <string name="about_us">درباره ما</string>
    <string name="nothing"> </string>
</resources>
