<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        android:layout_gravity="top|center"
        android:background="@drawable/point"
        android:contentDescription="@string/nothing"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_fa_name"
        android:gravity="center"
        android:textSize="32sp"
        android:layout_marginTop="-20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="-17dp"
        android:layout_marginStart="18dp"
        android:textColor="@color/colorText"
        />
    <!--LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="گل سرخ"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="آقای کرمی"/>

    </LinearLayout-->

</LinearLayout>